--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
+  "homepage": "./build",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
